# regula-vasc

./: .env.example  .gitignore  Dockerfile  conftest.py  docker-compose.yml  pyproject.toml
apps/accounts/: admin.py  apps.py  context_processors.py  decorators.py  forms.py  middleware.py  models.py  password_reset_views.py  profile_views.py  services.py  urls.py  views.py
apps/cases/: admin.py  apps.py  models.py  navigation.py  services.py  signals.py
apps/dashboard/: admin.py  apps.py  models.py  urls.py  views.py
apps/doctor/: apps.py  forms.py  presenters.py  urls.py  views.py
apps/intake/: apps.py  forms.py  services.py  urls.py  views.py
apps/llm/: admin.py  apps.py  models.py
apps/pipeline/: apps.py  json_parser.py  llm.py  llm1_service.py  llm2_service.py  orchestrator.py  pdf_utils.py  tasks.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  test.py
openspec/: config.yaml
static/: manifest.json
static/css/: app.css
static/js/: dashboard_search.js  decision.js  doctor_queue_filter.js  password-toggle.js  pdf-viewer.js  sw.js  upload.js  work_lock.js
templates/: base.html  home.html
templates/accounts/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html  switch_role.html
templates/cases/: _communication_thread.html
templates/dashboard/: _case_detail_content.html  _case_list.html  _dashboard_content.html  _nav.html  (+6 more)
tests/: test_home_page.py  test_integration_flow.py
(+74 files in other folders)
